Api resort finalizada